[tool.poetry]
name = "gait-recognition"
version = "0.1.0"
description = ""
authors = ["izarte <inigozarate01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
